--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2375,8 +2375,8 @@
                                <p style="text-align:center;"><strong>Figure: Action Flow Tab </strong></p>
                                <p>4. The e-worker machine tab lists the machines registered with the e-manager console. It contains the required runtime to execute the action flows that are published to the e-manager console.</p>
                                <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                               <p style="text-align:center;"><strong>Figure: E-Workers Machine Tab </strong></p>
-                               <p>5. The Queues tab shows the current and pending tasks waiting for the execution in the e-workers machine.</p>
+                               <p style="text-align:center;"><strong>Figure: E-Worker Machines Tab </strong></p>
+                               <p>5. The Queues tab shows the current and pending tasks waiting for the execution in the e-worker machines.</p>
                                <img src="{{ '/assets/images/doc-img64.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure:  Queues</strong></p>
                                <p>6. The functionality of Schedules tab is, to schedule/execute action flows repetitively on a timely basis, like Minutes, Hourly, Daily, Weekly, Monthly or Advanced,</p>
@@ -2415,7 +2415,7 @@
                             <p>1. The worker category is the type of e-worker machine that is going to be registered. Currently, only the “Reserved” type can be created.</p>
                             <h5>Reserved:</h5>
                             <p>1. If an e-worker machine is created as “Reserved” then the flows can be executed only on that machine.</p>
-                            <h5>Creating an e-worker machine:</h5>
+                            <h5>Creating an E-Worker Machine:</h5>
                             <p>1. This is the e-worker machine screen before the action flows execution environment is created.</p>
                              <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                              <p style="text-align:center;"><strong>Figure: E-Worker Machine Screen </strong></p>
@@ -2425,14 +2425,14 @@
                             <p><span class="numbers">3.</span> Enter the details and click on SUBMIT. A message confirming successful submission will appear. This creates the e-worker machine. After creating the e-worker machine, the details of the e-worker machine like name, host, and so on can be seen.</p>
                             <p><span class="numbers">4.</span> The following image shows the screen of the e-worker  created, also the details of the created e-worker machine can be seen.</p>
                             <img src="{{ '/assets/images/doc-img83.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                            <p style="text-align:center;"><strong>Figure: e-worker machine Details </strong></p>
+                            <p style="text-align:center;"><strong>Figure: E-Worker Machine Details </strong></p>
                              <h5>Delete E-Worker Machine</h5>
                             <p><span class="numbers">1.</span> To delete an e-worker machine created, just click on the DELETE icon which is available in the details of the machine.</p>
                             <img src="{{ '/assets/images/doc-img84.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: Delete Registered e-worker machine Screen</strong></p>
+                             <p style="text-align:center;"><strong>Figure: Delete Registered E-Worker Machine Screen</strong></p>
                             <p><span class="numbers">2.</span> On the next screen, click on YES to confirm the deletion of the registered e-worker machine.</p>
                             <img src="{{ '/assets/images/doc-img85.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: Registered e-worker machine Deletion Confirmation Screen </strong></p>
+                             <p style="text-align:center;"><strong>Figure: Registered E-Worker Machine Deletion Confirmation Screen </strong></p>
                          </div>
 
                          <div id="Queues"  class="page-section">
@@ -2442,7 +2442,7 @@
                             <p style="text-align:center;"><strong>Figure: Queues Screen </strong></p>
                             <p>Select the e-worker machine  to check the action flows to be executed in the selected environment.</p>
                             <img src="{{ '/assets/images/doc-img65.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                            <p style="text-align:center;"><strong>Figure: Select e-worker machine</strong></p>
+                            <p style="text-align:center;"><strong>Figure: Select E-Worker Machine</strong></p>
                             <p>After selecting the e-worker machine, you can see the action flows to be executed. </p>
                             <img src="{{ '/assets/images/doc-img66.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                             <p style="text-align:center;"><strong>Figure: Action Flows Status</strong></p>
