--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2624,7 +2624,7 @@
                              <p><span class="numbers">3.</span>	To publish an action flow to the e-manager console, first zip the action flow folder. Click on the UPLOAD button on the top right corner of the page, browse the zip file, and click the UPLOAD button. The action flow will be uploaded.</p>
                              <p><span class="numbers">4.</span> After uploading, execute the flow by clicking on the PLAY button.</p>
                              <p><span class="numbers">5.</span>	Select the Execution target type as Reserved, select the e-worker machine in which the flow should get executed, select the execution type, and click on the submit button.</p>
-                             <p><span class="numbers">6.</span>	e-manager console automatically maintains versioning for the published action flows. Click on the number below versions to see the default version of the action flow. The default version of a published action flow is 1.0. If you publish the action flow again with some changes, the latest one is marked as the default one. You can switch back the older version of action flow at any point in time by simply selecting the required version.</p>
+                             <p><span class="numbers">6.</span>	E-Manager Console automatically maintains versioning for the published action flows. Click on the number below versions to see the default version of the action flow. The default version of a published action flow is 1.0. If you publish the action flow again with some changes, the latest one is marked as the default one. You can switch back the older version of action flow at any point in time by simply selecting the required version.</p>
                              <p><span class="numbers">7.</span> You can see the logs of an executed action flow under the instances of the Action Flows. You can also see the live logs of an instance while the execution is in progress.</p>
                              <p><span class="numbers">8.</span>	Schedules functionality is, to schedule/execute action flows repetitively on a timely basis.</p>
                              <p><span class="numbers">9.</span> To create a Schedule, navigate to the SCHEDULES page, and click on the CREATE button. </p>
@@ -2641,7 +2641,7 @@
 
 
                           <div id="BestPractices"  class="page-section">
-                            <h3><span class="numbers">6.</span> Best Practices & Guidelines</h3>
+                            <h3> Best Practices & Guidelines</h3>
                             <h4 class="skyBlue">Workflow Design</h4>
                             <p><span class="numbers">1.</span>  TechForce.ai by default offers a diagram for integrating activities into a working structure when developing a workflow file:</p>
                             <h5>Stage</h5>
@@ -2657,7 +2657,7 @@
                             <p><span class="numbers">2.</span> Variables should align with the naming convention.</p>
                             <p><span class="numbers">3.</span> Variables should be upper Camel Case, e.g. FirstName, LastName</p>
 
-                            <h4>UserInterface Automation</h4>
+                            <h4>User Interface Automation</h4>
                             <p><span class="numbers">1.</span> Sometimes the usual manual routine is not the optimal way for automation. Carefully explore the application’s behavior before committing to a certain approach.</p>
                             <p><span class="numbers">2.</span> UI automation goes at its best when Robots and applications run on the same machine because TechForce.ai can interact directly with the technology behind the application to get data behind the scenes.</p>
                             <h5>Input Methods</h5>
