--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2761,7 +2761,7 @@
                             <h5>Benefits of TechForce.ai Studio Upgraded version </h5>
                             <p>1.	Maintaining the logs of Action Flows.</p>
                             <p>2.	Scheduling the flows.</p>
-                            <p>3.	e-worker machines to select the run environment to execute the flows.</p>
+                            <p>3.	E-Worker Machines to select the run environment to execute the flows.</p>
                             <p>4.	Queues</p>
                             <p>5. Secret Vault</p>
                             <p>6.	Restricted user hierarchy</p>
