--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2486,7 +2486,7 @@
                           <p> Choose the “Action Flow" that you want to Schedule.</p>
                           <h5><span class="numbers">3.</span> Reserved</h5>
                           <p>Select the e-worker machine in which the execution should be done.</p>
-                          <h5><span class="numbers">4.</span> E-Workers Machine</h5>
+                          <h5><span class="numbers">4.</span> E-Worker Machine</h5>
                           <p>Select the e-worker machine in which the execution should be done.</p>
                           <h5><span class="numbers">5.</span> Browser option</h5>
                           <p>Select the Browser option to execute in Chrome, Mozilla Firefox, Microsoft Edge, or headless mode.</p>
@@ -2561,7 +2561,7 @@
 
                          <div id="Software"  class="page-section">
                            <h4 class="skyBlue"><span class="numbers"></span> Software Requirements</h4>
-                           <h5>Worker</h5>
+                           <h5>E-Worker Machine</h5>
                            <h5>OS Compatibility:</h5>
                            <ol>
                            <li><span class="numbers">1.</span><strong> On Premise: </strong>Windows 10 / Windows Server 2016. </li>
@@ -2614,7 +2614,7 @@
 
                          <div id="Registeringworker"  class="page-section">
                              <h4 class="purple"><span class="numbers"></span> Registering E-Worker Machine with E-Manager Console</h4>
-                          <a href="javascript: scrollToForm4();">Refer e-worker machine creation from WorkerManagement</a>
+                          <a href="javascript: scrollToForm4();">Refer e-worker machine creation from Worker Management</a>
                           </div>
 
                          <div id="TriggeringBots"  class="page-section">
