--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -972,6 +972,7 @@
                              <p>3. Upon successful registration, you will be redirected to the login page.</p>
                              <img src="{{ '/assets/images/doc-img113.png' | relative_url }}" alt="image" style="width:400px;text-align:center;border:1px solid green;margin-left:20%;margin-top:10px;margin-bottom:10px;">
                               <p>4.	You will be prompted to verify your email on the first login.</p>
+
                              <img src="{{ '/assets/images/doc-img114.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
                               <p>5.	 Go to your registered email and click on the verification link to complete the email verification process.</p>
                              <img src="{{ '/assets/images/doc-img115.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
@@ -2371,7 +2372,7 @@
                                <p style="text-align:center;"><strong>Figure: Login </strong></p>
                                <p>2. Enter the credentials and click on the login button, you can see Action flows, e-worker machines, Queues, Schedules, and Secret Vault in the left menu.</p>
                                <p>3. The action flows tab shows the list of action flows published to the e-manager console.</p>
-                               <img src="{{ '/assets/images/doc-img58.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img119.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Action Flow Tab </strong></p>
                                <p>4. The e-worker machine tab lists the machines registered with the e-manager console. It contains the required runtime to execute the action flows that are published to the e-manager console.</p>
                                <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
@@ -2391,7 +2392,7 @@
                              <h4 class="skyBlue"> Process Management</h4>
                              <h5>Adding the  Action Flows.</h5>
                              <p>1. Log in to the e-manager console account to view the Action Flows screen. Click on the UPLOAD button at the top right corner and upload the Zip file of the RPA script onto the Action Flows. After uploading, execute the flow.</p>
-                             <img src="{{ '/assets/images/doc-img58.png' | relative_url }}"alt="image" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img119.png' | relative_url }}"alt="image" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                              <p style="text-align:center;"><strong>Figure: Action Flows Screen </strong></p>
                              <h5>Executing Action Flows:</h5>
                              <p>2. In the Action Flows  page, upload the RPA flow and Click on the PLAY button to execute the flow. After clicking on the play button, the following image will appear.</p>
@@ -2417,8 +2418,8 @@
                             <p>1. If an e-worker machine is created as “Reserved” then the flows can be executed only on that machine.</p>
                             <h5>Creating an E-Worker Machine:</h5>
                             <p>1. This is the e-worker machine screen before the action flows execution environment is created.</p>
-                             <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: E-Worker Machine Screen </strong></p>
+                            <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
+                            <p style="text-align:center;"><strong>Figure: E-Worker Machine Screen </strong></p>
                             <p><span class="numbers">2.</span>  To create an e-worker machine, open the TechForce.ai studio, which will create an icon in the task tray. Open the task tray, Right-click on the studio icon. Click on settings and register. The following screen displays.</p>
                             <img src="{{ '/assets/images/doc-img82.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                             <p style="text-align:center;"><strong>Figure: Register Your E-Worker Machine </strong></p>
@@ -2426,13 +2427,13 @@
                             <p><span class="numbers">4.</span> The following image shows the screen of the e-worker  created, also the details of the created e-worker machine can be seen.</p>
                             <img src="{{ '/assets/images/doc-img83.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                             <p style="text-align:center;"><strong>Figure: E-Worker Machine Details </strong></p>
-                             <h5>Delete E-Worker Machine</h5>
-                            <p><span class="numbers">1.</span> To delete an e-worker machine created, just click on the DELETE icon which is available in the details of the machine.</p>
+                            <h5>Delete E-Worker Machine</h5>
+                            <p><span class="numbers">1.</span> To delete an e-worker machine created, click on the three dots available in the details of the machine delete option would be visible, click on the delete option.</p>
                             <img src="{{ '/assets/images/doc-img84.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: Delete Registered E-Worker Machine Screen</strong></p>
+                            <p style="text-align:center;"><strong>Figure: Delete Registered E-Worker Machine Screen</strong></p>
                             <p><span class="numbers">2.</span> On the next screen, click on YES to confirm the deletion of the registered e-worker machine.</p>
                             <img src="{{ '/assets/images/doc-img85.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: Registered E-Worker Machine Deletion Confirmation Screen </strong></p>
+                            <p style="text-align:center;"><strong>Figure: Registered E-Worker Machine Deletion Confirmation Screen </strong></p>
                          </div>
 
                          <div id="Queues"  class="page-section">
