--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -565,7 +565,7 @@
                                           <li><a class="child 1" href="#What"> What's New</a></li>
                                       </ul>
                                       <li class="subMenu">
-                                          <a href="#TechforceRPA" class="heading"><span class="numbers"></span>Techforce.Ai RPA</a>
+                                          <a href="#TechforceRPA" class="heading"><span class="numbers"></span>TechForce.Ai RPA</a>
                                       </li>
                                   </li>
                                  <li class="subMenu">
@@ -932,7 +932,7 @@
                               <p>Techforce.ai E-Manager console is a centralized administration console that enables you to publish, execute, schedule, monitor, and manage action flows for your organization. It is a central application that can manage and execute action flows on on-premises and cloud <strong>E-Worker Machines</strong>. An E-Worker Machine can be a physical or virtual machine that consists of Techforce.ai RPA runtime to execute Action Flows. You can register an E-Worker Machine with E-Manager Console by using the Techforce.ai icon under the system tray menu.</p>
                               <p>Techforce.ai E-Manager Console manages queuing of the requests, executing the action flows as per the sequence, logging audit trial, sending notifications, and real-time reporting. It also supports version control of the Action Flows, user & role management, profile management, billing management, and personal data management.</p>
                               <p><strong>Techforce.ai Runtime:</stong> Techforce.ai Runtime is the actual engine that parses the actions in Action Flow to software instructions and executes those instructions as per the properties configured in the action. It receives commands from either E-Manager Console or Studio and completes the execution as per the instructions.</p>
-                            
+
                             </div>
 
 
