--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -913,7 +913,7 @@
 
                               <h5>Techforce.ai RPA components:</h5>
                               <p>Techforce.ai RPA has three main components that will help you automate repetitive tasks. These components work together to provide both attended and unattended/scheduled automation. The following diagram depicts the logical flow architecture of the Techforce.ai RPA.</p>
-                              <img src="{{ '/assets/images/doc-img120.jpg' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-top:10px;margin-bottom:10px;">
+                              <img src="{{ '/assets/images/doc-img120.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-top:10px;margin-bottom:10px;">
                               <p>Let us understand each of these main components.</p>
 
                               <h5>Techforce.ai RPA Studio:</h5>
