--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -817,7 +817,7 @@
 
                       <div class="doc-data col-md-8 col-sm-8">
                         <div id="AboutTechForce"  class="page-section">
-                                <h3>About Techforce.ai </h2>
+                                <h3 style="text-decoration:none;">About Techforce.ai </h2>
                                 <p>Techforce.ai(TFAI) is the industry’s first e-workforce company that helps companies deploy their own human-like digital employees to perform work, by leveraging intelligent automation technologies.</p>
                                 <img src="{{ '/assets/images/doc-img109.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-left:0px; margin-top:10px;margin-bottom:10px;">
                                 <p>Intelligent Automation Software includes five major technologies:</p>
