--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -817,7 +817,7 @@
 
                       <div class="doc-data col-md-8 col-sm-8">
                         <div id="AboutTechForce"  class="page-section">
-                                <h3 style="text-decoration:none;">About Techforce.ai </h2>
+                                <h3 style="text-transform:none;">About Techforce.ai </h2>
                                 <p>Techforce.ai(TFAI) is the industry’s first e-workforce company that helps companies deploy their own human-like digital employees to perform work, by leveraging intelligent automation technologies.</p>
                                 <img src="{{ '/assets/images/doc-img109.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-left:0px; margin-top:10px;margin-bottom:10px;">
                                 <p>Intelligent Automation Software includes five major technologies:</p>
@@ -903,7 +903,7 @@
                             </div>
 
                             <div id="TechforceRPA"  class="page-section">
-                              <h3>Techforce.ai RPA</h3>
+                              <h3 style="text-transform:none;">Techforce.ai RPA</h3>
                               <p>Techforce.ai Robotic Process Automation (Techforce.ai RPA) is one of the five components of the Techforce.ai platform. Techforce.ai RPA helps you automate mundane repetitive business processes. It helps businesses to streamline enterprise operations and reduce costs. Also, Techforce.ai RPA enables business users to focus on the most important value-added tasks by automating repetitive clerical tasks.</p>
                               <h5>Benefits of Techforce.ai RPA:</h5>
                               <li>Low cost and easy to implement</li>
@@ -937,7 +937,7 @@
 
 
                          <div id="TechForce"  class="page-section">
-                             <h3>Techforce.ai Studio Guide</h3>
+                             <h3 style="text-transform:none;">Techforce.ai Studio Guide</h3>
                           </div>
 
                           <div id="Installation"  class="page-section">
