--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -917,7 +917,7 @@
                               <p>Let us understand each of these main components.</p>
 
                               <h5>Techforce.ai RPA Studio:</h5>
-                              <p><strong>Techforce.ai RPA Studio:</strong>is a low-code, integrated development environment that helps business users and developers to create automation<strong> Action Flows </strong> using the drag and drop <strong>Actions</strong> from the <strong>Action Library</strong>.
+                              <p><strong>Techforce.ai RPA Studio </strong>is a low-code, integrated development environment that helps business users and developers to create automation<strong> Action Flows </strong> using the drag and drop <strong>Actions</strong> from the <strong>Action Library</strong>.
                                 <li>An <strong>Action</strong> is a piece of software program that performs a pre-defined task </li>
                                 <li>An <strong>Action</strong> Library consists of many such actions. </li>
                                 <li>An<strong> Action Flow</strong> consists of a series of actions configured in a stage to automate a specific process.</p>
@@ -1242,7 +1242,7 @@
                             <p style="text-align:center;"><strong>Figure 22: Programming</strong></p>
 
                             <li><strong> Mail Integration</strong></li>
-                            <p>Mail Integration is used to automate mail operations to configure Read Mail, Send Mail and Save Attachments using Sub-Actions: IMAP, POP3, OutLook2016 and Save Attachments.</p>
+                            <p>Mail Integration is used to automate mail operations to configure Read Mail, Send Mail and Save Attachments using Sub-Actions: IMAP, POP3, Outlook, and Save Attachments.</p>
                             <img src="{{ '/assets/images/doc-img38.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
                             <p style="text-align:center;"><strong>Figure 23: Mail Integration</strong></p>
 
@@ -2203,7 +2203,7 @@
               </div>
 
               <div id="Outlook"  class="page-section">
-                <h5> Outlook2016</h5>
+                <h5> Outlook</h5>
                 <p>The outlook2016 actions are used to read and send emails from the Outlook application Read mail</p>
                 <h6>Get Outlook Mail</h6>
                  <p>Reads emails from the configured outlook account.</p>
