--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2737,12 +2737,12 @@
                             <p> Make sure to add enough wait time between the keyboard shortcuts and keystroke actions.</p>
                             <p> Always use a maximized window for better portability.</p>
                             <h5>Tips and Tricks of using Techforce.ai Studio</h5>
-                            <p><span class="numbers">1.</span>	Variables:</p>
-                            <p><span class="numbers">2.</span> In Techforce.ai RPA all variables are global variables. It means any variable can be used anywhere in the script.</p>
-                            <p><span class="numbers">3.</span> The variables declared in the main e-worker can be used in the sub e-worker but vice-versa is not possible.</p>
-                            <p><span class="numbers">4.</span> Use a forward slash (/) instead of a backward slash (\) while giving the path in the variables.</p>
-                            <p><span class="numbers">5.</span> For example, the usual notation in the windows system is C:\Users\Documents\xyz.xlsxs</p>
-                            <p><span class="numbers">6.</span> Use C:/Users/Documents/xyz.xlsx or C:\\Users\\Documents\\xyz.extensions while giving the path in the variable.</p>
+                            <h5><span class="numbers">1.</span>	Variables:</h5>
+                            <p> In Techforce.ai RPA all variables are global variables. It means any variable can be used anywhere in the script.</p>
+                            <p> The variables declared in the main e-worker can be used in the sub e-worker but vice-versa is not possible.</p>
+                            <p> Use a forward slash (/) instead of a backward slash (\) while giving the path in the variables.</p>
+                            <p> For example, the usual notation in the windows system is C:\Users\Documents\xyz.xlsxs</p>
+                            <p> Use C:/Users/Documents/xyz.xlsx or C:\\Users\\Documents\\xyz.extensions while giving the path in the variable.</p>
 
                             <h5>2. Loops and Conditions</h5>
                             <p><span class="numbers">1.</span> Use IF ELSE actions to implement business logic and Loops to iterate. Use Jump Statements and infinite loops if necessary.</p>
